--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -66,6 +66,7 @@
     width: 250px;
     margin-top: 20px;
     margin-left: 20px;
+    box-shadow:  0.1em grey;
 }
 .btn{
     display: flex;
@@ -112,11 +113,13 @@
     width: 750px;
     height: 200px;
     margin-top: 30px;
+   
 } 
 
 .row{
     margin-top: 15px;
     justify-content: space-around;
+
 }
 /* bagian kondisi */
 .text{
@@ -129,16 +132,37 @@
 .col-md-3 {
     background-color: white;
     /* margin-left: 30px; */
-    height: 170px;
+    height: 150px;
     border-radius: 20px;
+    transform: translate3d(2px, 0, 0);
+    box-shadow: 0 0 0.5em gray;
 }
 
-.word{
-    margin-top: 10px;
-    font-size: 16pt;
+.label{
+    font-size: 25pt;
+    margin-top: -60px;
+    margin-left: 90px;
+    font-size: 14pt;
     color:rgba(17, 15, 15, 0.781);
 }
-.bi{
-    margin-top: 10px;
+.number{
+    font-size: 22pt;
+    margin-top: -15px;
+    font-weight: 300;
 }
-/* bagian kanan */
+.label2{
+    font-size: 25pt;
+    margin-top: -60px;
+    margin-left: 90px;
+    font-size: 14pt;
+    color:rgba(17, 15, 15, 0.781);
+}
+.number2{
+    font-size: 22pt;
+    margin-top: -15px;
+    font-weight: 300;
+}
+.bi{
+    margin-top: 30px;
+}
+/* bagian kanan *
