--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -113,7 +113,8 @@
     width: 750px;
     height: 200px;
     margin-top: 30px;
-   
+    transform: translate3d(2px, 0, 0);
+    box-shadow: 0 0 0.5em gray;
 } 
 
 .row{
@@ -139,6 +140,7 @@
 }
 
 .label{
+    position: inherit;
     font-size: 25pt;
     margin-top: -60px;
     margin-left: 90px;
