--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ body, html {
 
 #rightPane {
     width: 60%;
-    min-width: 600px;
+    /* min-width: 600px; */
     padding: 10px;
     background: lightgray;
     border-top-right-radius: 25px;
@@ -46,17 +46,24 @@ body, html {
 }
 
 .kondisi-title{
-    margin-top: 10px;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.info-container{
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
 }
 
-.kondisi-title-p{
-    width: auto;
-    max-width: 50px;
+.weather-info{
+    background: white;
+    width: 30%;
+    margin: 5px;
+    border-radius: 15px;
+    padding: 5px;
+    display: flex;
 }
 
-.kondisi-title-a{
-    width: auto;
-    max-width: 200px;
+.weather-info svg{
+    margin-right: 10px;
 }
